# mb2-embassy-display-scan

./: Cargo.toml  README.md
src/: main.rs
