[package]
authors = ["Bart Massey <bart@cs.pdx.edu>"]
edition = "2021"
name = "mb2-embassy-display-scan"
version = "0.1.0"

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.0.0"
cortex-m-rt = "0.7.5"

[dependencies.microbit-bsp]
version = "0.6.0"
git = "http://github.com/lulf/microbit-bsp"

[dependencies.embassy-executor]
version = "0.7.0"
features = ["defmt", "arch-cortex-m", "executor-thread"]

[dependencies.embassy-time]
version = "0.4"
features = ["defmt"]

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

[dependencies.panic-probe]
version = "1.0.0"
features = ["print-defmt"]

[profile.release]
debug = 2
